# GitTop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.txt  bacon.toml  build.rs
.circleci/: config.yml
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur.yml  chocolatey.yml  ci.yml  copr.yml  docs.yml  flatpak.yml  ppa.yml  pr-labeler.yml  prek-label.yml  prek.yml  release.yml  scoop.yml  snap.yml  winget.yml
bucket/: gittop.json
docs/: PIPELINES.md  RELEASING.md
packaging/aur/stable-bin/: PKGBUILD
packaging/chocolatey/: gittop.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/copr/: gittop.spec
packaging/flatpak/: .gitignore  com.github.AmarBego.GitTop.metainfo.xml  com.github.AmarBego.GitTop.yml  io.github.AmarBego.GitTop.ci.yml  io.github.AmarBego.GitTop.local.yml  io.github.AmarBego.GitTop.metainfo.xml  io.github.AmarBego.GitTop.yml
packaging/innosetup/: gittop.iss
packaging/ppa/debian/: changelog  control  copyright  rules
packaging/snap/: snapcraft.yaml
packaging/wix/: main.wxs
src/: diagnostics.rs  main.rs  settings.rs  tray.rs  update_checker.rs
src/cache/: disk.rs  mod.rs
src/github/: auth.rs  client.rs  keyring.rs  mod.rs  proxy_keyring.rs  redaction.rs  session.rs  subject_details.rs  types.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/resources/: windows.rc
src/specs/: README.md  mock_notifications.rs  mod.rs
src/ui/: app.rs  context.rs  effects.rs  icons.rs  mod.rs  routing.rs  theme.rs  window_state.rs
src/ui/features/: mod.rs
src/ui/features/account_management/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/account_rules/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/bulk_actions/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/general_settings/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/network_proxy/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/notification_details/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/notification_list/: messages.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/notification_list/widgets/: item.rs  mod.rs
src/ui/features/org_rules/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/power_mode/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/power_mode/widgets/: details_panel.rs  mod.rs
src/ui/features/rule_overview/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/rule_overview/widgets/: explain_panel.rs
src/ui/features/sidebar/: messages.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/features/thread_actions/: message.rs  mod.rs  state.rs  update.rs
src/ui/features/type_rules/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/ui/handlers/: mod.rs  navigation.rs  platform.rs
src/ui/screens/: login.rs
src/ui/screens/notifications/: desktop_notify.rs  engine.rs  group.rs  helper.rs  messages.rs  mod.rs  processing.rs  screen.rs  sidebar.rs  states.rs
src/ui/screens/notifications/components/: group.rs  header.rs  mod.rs
src/ui/screens/notifications/view/: bulk.rs  content.rs  group.rs  header.rs  mod.rs  sidebar.rs  sidebar_state.rs  states.rs
src/ui/screens/settings/: components.rs  messages.rs  mod.rs  screen.rs
src/ui/screens/settings/rule_engine/: components.rs  explain_decision.rs  inspector.rs  messages.rs  mod.rs  rules.rs  screen.rs
src/ui/screens/settings/rule_engine/tabs/: account_rules.rs  mod.rs  overview.rs
src/ui/screens/settings/rule_engine/view/: handbook.rs  mod.rs  org.rs  overview.rs
src/ui/screens/settings/tabs/: accounts.rs  general.rs  mod.rs  network_proxy.rs  power_mode.rs
src/ui/widgets/: mod.rs  notification_item.rs
src/ui/widgets/power/: details_panel.rs  top_bar.rs
www/: config.toml
www/content/: _index.md
www/content/dev/: ARCHITECTURE.md  BRANCHING.md  RELEASING.md  _index.md
www/content/features/: _index.md  accessibility.md  accounts.md  power-mode.md  rules.md
www/sass/: style.scss
www/templates/: base.html  page.html
