[package]
name = "GitTop"
version = "0.3.0"
edition = "2024"
description = "Why spin up a browser just to check your GitHub notifications?"
authors = ["AmarBego"]
license = "AGPL-3.0-only"


[package.metadata.deb]
maintainer = "AmarBego <begovicamar@proton.me>"
copyright = "2024, AmarBego"
license-file = ["LICENSE.md", "4"]
depends = "$auto"
section = "utils"
assets = [
    [
        "target/release/gittop",
        "usr/bin/",
        "755",
    ],
    [
        "src/platform/resources/gittop.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "assets/images/GitTop-256x256.png",
        "usr/share/icons/hicolor/256x256/apps/gittop.png",
        "644",
    ],
    [
        "README.txt",
        "usr/share/doc/gittop/",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gittop", dest = "/usr/bin/gittop", mode = "755" },
    { source = "src/platform/resources/gittop.desktop", dest = "/usr/share/applications/gittop.desktop", mode = "644" },
    { source = "assets/images/GitTop-256x256.png", dest = "/usr/share/icons/hicolor/256x256/apps/gittop.png", mode = "644" },
    { source = "README.txt", dest = "/usr/share/doc/gittop/README.txt", mode = "644" },
    { source = "LICENSE.md", dest = "/usr/share/doc/gittop/LICENSE.md", mode = "644" },
]

[[bin]]
name = "gittop"
path = "src/main.rs"


[dependencies]
# Iced GUI framework - using software renderer (tiny-skia) for minimal memory footprint
# Base features shared across all platforms
iced = { version = "0.14.0", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "image",
    "svg",
    "wgpu",
] }


# Iced additional widgets - context menus
iced_aw = { version = "0.13", default-features = false, features = [
    "context_menu",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client for GitHub API
reqwest = { version = "0.13.1", features = [
    "json",
    "rustls",
], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }

# Error handling
thiserror = "2"

# Open URLs in browser
open = "5"

# SVG icons - Lucide icon set for CPU-efficient rendering
icondata_lu = "0.1"
icondata_core = "0.1"

# Cross-platform directories
dirs = "6.0.0"

# UUID generation for rule IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Embedded database for caching
sled = "0.34"

# Image processing for tray icons
image = { version = "0.25", default-features = false, features = [
    "ico",
    "png",
] }

# Single instance (Windows named mutex)
single-instance = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
] }

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Windows-specific APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
] }
tauri-winrt-notification = "0.7"
keyring = { version = "3", features = ["windows-native"] }
# System tray (native on Windows)
tray-icon = { version = "0.21.2", default-features = false }

# macOS-specific APIs
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
keyring = { version = "3", features = ["apple-native"] }
# System tray (native on macOS)
tray-icon = { version = "0.21.2", default-features = false }

# Linux-specific APIs
[target.'cfg(target_os = "linux")'.dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wayland",
    "x11",
] }
notify-rust = "4"
keyring = { version = "3", features = ["sync-secret-service"] }
# Pure-Rust system tray via StatusNotifierItem
ksni = { version = "0.3", features = ["blocking"] }

# FreeBSD-specific APIs
[target.'cfg(target_os = "freebsd")'.dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wayland",
    "x11",
] }
notify-rust = "4"
keyring = { version = "3", features = ["sync-secret-service"] }
# Pure-Rust system tray via StatusNotifierItem
ksni = { version = "0.3", features = ["blocking"] }

# Build dependencies for Windows icon embedding
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Use bacon for development
[profile.dev]
opt-level = 1
debug = true
incremental = true
